# ec-toys

./: .gitignore  README.md  requirements.txt  setup.cfg
ectoys/: utils.py
ectoys/cmd/: __init__.py  cinder.py  guest.py  nova.py  test.py  web.py
ectoys/common/: conf.py  exceptions.py  log.py  utils.py
ectoys/common/test/: scenario.py
ectoys/managers/openstack/: client.py  manager.py
ectoys/modules/: guest.py
ectoys/modules/openstack/: client.py  exceptions.py  manager.py  task.py
etc/: ec-nova-template.conf
release/: Dockerfile  build-with-docker.sh
