[metadata]
name = ectoys
summary = EC Toys
author = fjboy
author_email = 2535463841@qq.com
home_page = https://github.com/fjboy/ec-toys

[global]

[files]
packages =
    ectoys

[entry_points]
console_scripts =
    ectoys-guest = ectoys.cmd.guest:main
    ectoys-test = ectoys.cmd.test:main
    ectoys-cinder = ectoys.cmd.cinder:main
    ectoys-web = ectoys.cmd.web:main
